# StreamOverlayArcade

./: .gitignore  icon.svg.import  project.godot  stream_overlay_arcade_rust.gdextension  stream_overlay_arcade_rust.gdextension.uid  stream_silhouette_rust.gdextension  stream_silhouette_rust.gdextension.uid
addons/godot-rapier2d/: faucet_2d.gd.uid  fluid_2d_circle.gd.uid  fluid_2d_rectangle.gd.uid  fluid_2d_renderer.gd.uid  fluid_2d_shader_renderer.gd.uid  godot-rapier2d.gdextension.uid  rapier_state_2d.gd.uid  water_shader.gdshader.uid
models/: deeplab_v3.tflite.uid  selfie_segmenter.tflite.uid  yolact_edge_mobilenetv2_550x550.onnx.uid
python/: image.png.import  image.png_mask.png.import  output.txt  segmentation.py  selfie_segmentation.py  selfie_segmentation_bridge.py  src.py
rust/: .gitignore  Cargo.toml  README.md  build.rs  build_wasm.bat
rust/.cargo/: config.toml
rust/src/: lib.rs  python_bridge.rs
scenes/: camera.tscn
source/: camera.gd  camera.gd.uid  generator.gd  generator.gd.uid
source/onnx/: evades_map_loader.gd.uid  evades_map_loader_register.gd.uid  evades_map_resource.gd.uid  onxx_loader.gd  onxx_loader_register.gd  onxx_resource.gd  onxx_resource.gd.uid
source/pth/: onxx_loader.gd.uid  onxx_loader_register.gd.uid  pth_loader.gd  pth_loader.gd.uid  pth_loader_register.gd  pth_loader_register.gd.uid  pth_resource.gd  pth_resource.gd.uid
source/tflite/: tflite_loader.gd  tflite_loader.gd.uid  tflite_loader_register.gd  tflite_loader_register.gd.uid  tflite_resource.gd  tflite_resource.gd.uid
