[package]
name = "stream_overlay_arcade_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "stream_overlay_arcade_rust"
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.2.4", features = ["experimental-wasm", "experimental-threads"] }
nokhwa = { version = "0.10.7", features = ["input-native", "output-threaded"] }
ndarray = "0.15.6"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"

[profile.release]
debug = true
